Fixed bug when reading keys from classpath